# mrfootdr_scraper

./: README.md  mrfoot_dr.json  pyproject.toml
src/mrfootDR_scraper/: __init__.py  __main__.py  core.py
